<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/windowsBackground"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/windowsBackground"
        style="@style/AppTheme"
        tools:context=".whatPage">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolB"
            android:layout_width="match_parent"
            android:gravity="center"
            android:elevation="4dp"
            android:layout_height="56dp"
            android:background="@color/textColor"
            app:theme="@style/ToolBarTheme">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/toolBarText"
                android:layout_gravity="center"
                />
        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/android_card_view_example2"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="100dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:layout_marginTop="25dp"
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/textColorDark"
                    android:textSize="20dp"
                    android:lineHeight="2dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/what" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/textColorDark"
                    android:layout_marginBottom="25dp"
                    android:textSize="20dp"
                    android:lineHeight="2dp"
                    android:text="@string/what_two" />

                <ImageView
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:src="@drawable/pic"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/textColorDark"
                    android:textSize="20dp"
                    android:text="@string/what_three" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/textColorDark"
                    android:layout_marginBottom="15dp"
                    android:textSize="20dp"
                    android:lineHeight="2dp"
                    android:text="@string/what_four" />

            </LinearLayout>

            </android.support.v7.widget.CardView>

        </android.support.v4.widget.NestedScrollView>

    </android.support.constraint.ConstraintLayout>

</ScrollView>