<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/windowsBackground"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/windowsBackground"
        style="@style/AppTheme"
        tools:context=".effectsFlood">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolB"
            android:layout_width="match_parent"
            android:gravity="center"
            android:elevation="4dp"
            android:layout_height="56dp"
            android:background="@color/textColor"
            app:theme="@style/ToolBarTheme">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/toolBarText"
                android:layout_gravity="center"
                />
        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:padding="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    style="@style/AppTheme"
                    android:padding="16dp">

                    <android.support.v7.widget.CardView
                        android:id="@+id/android_card_view_example"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        app:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="250dp"
                            android:background="#fff">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:scaleType="fitXY"
                                android:src="@drawable/bldg" />

                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginTop="250dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="ECONOMIC"
                                android:textStyle="bold"
                                android:textSize="24dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="2dp"
                                android:textColor="@color/textColorDark"
                                />

                            <View
                                android:layout_width="fill_parent"
                                android:background="@android:color/darker_gray"
                                android:layout_height="2dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:textColor="@color/textColorDark"
                                android:text="@string/bldg"
                                android:layout_marginBottom="10dp"
                                android:textSize="18dp"
                                />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/android_card_view_example2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        app:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="250dp"
                            android:background="#fff">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:scaleType="fitXY"
                                android:src="@drawable/forest" />

                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginTop="250dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="ENVIRONMENT"
                                android:textStyle="bold"
                                android:textSize="24dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="2dp"
                                android:textColor="@color/textColorDark"
                                />

                            <View
                                android:layout_width="fill_parent"
                                android:background="@android:color/darker_gray"
                                android:layout_height="2dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:textColor="@color/textColorDark"
                                android:text="@string/env"
                                android:layout_marginBottom="10dp"
                                android:textSize="18dp"
                                />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/android_card_view_example3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        app:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="250dp"
                            android:background="#fff">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:scaleType="fitXY"
                                android:src="@drawable/animals" />

                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginTop="250dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="PEOPLE AND ANIMALS"
                                android:textStyle="bold"
                                android:textSize="24dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="2dp"
                                android:textColor="@color/textColorDark"
                                />

                            <View
                                android:layout_width="fill_parent"
                                android:background="@android:color/darker_gray"
                                android:layout_height="2dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:textColor="@color/textColorDark"
                                android:text="@string/people"
                                android:layout_marginBottom="10dp"
                                android:textSize="18dp"
                                />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.constraint.ConstraintLayout>

</ScrollView>